--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "57645"
+title: "Full Kelly Blog"
 author: "Jamie"
-description: "A general blog with the purpose of documenting my life and thoughts." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "I gamble.  A lot." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
