--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: "Full Kelly Blog"
+title: "Jamie's Blog"
 author: "Jamie"
-description: "I gamble.  A lot." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Portfolio/Blog" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 #email: "example@mail.com"
-twitter_username: "@jamiethewizard_"
+#twitter_username: "@jamiethewizard_"
 #github_username: "githubuser"
 #linkedin_username: "linkedinuser"
 #facebook_username: username
